tests/snapshots/snapshot_tests__array_init_both_ends_simpl.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_both_ends_simpl.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N i+0) (- N i+0)) (- N i+0)) (- N i+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(=> (not (= (- N Z) (- N i+0))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N i+0) (- N i+0)) (- N Z)) (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N Z))))",
        "(=> (not (= (- N Z) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N Z)) (Read_Int_Int a+0 (- N Z))))",
        "(=> (not (= Z (- N i+0))) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 i+0) (- N i+0) (- N i+0)) Z) (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z)))",
    ],
}
