tests/snapshots/snapshot_tests__array_init_doubl.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_doubl.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (Read_Int_Int a+0 i+0) 2)) i+0) (* (Read_Int_Int a+0 i+0) 2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z 0)) (= (Read_Int_Int (Write_Int_Int a+0 0 1734) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (Read_Int_Int a+0 i+0) 2)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= i+1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (Read_Int_Int a+0 i+0) 2)) i+1) (Read_Int_Int a+0 i+1)))",
        "(=> (not (= i+2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (Read_Int_Int a+0 i+0) 2)) i+2) (Read_Int_Int a+0 i+2)))",
    ],
}
